group li span fix implemented to fix vertical alignment of connect button

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -144,7 +144,10 @@ section {
 			text-decoration: none;
 			margin-left: 5px;
 		}
-		
+		span.group-link {
+			display: inline-block;
+			width: 60px;
+		}
     a.round {
       background: #8eac4b;
       display: block;
